<resources>
    <string name="app_name">MarvelComicGuide</string>
    <string name="marvel_title">Marvel</string>
    <string name="description_title">Description</string>
    <string name="comics_title">Comics</string>
    <string name="series_title">Series</string>
    <string name="events_title">Events</string>
    <string name="marvel_copy_right">All Data provided by Marvel. © 2016 Marvel</string>
</resources>
