<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/title_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/description_title"
            android:textColor="@color/red_tomato"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            tools:text="Formerly known as Emil Blonsky, a spy of Soviet Yugoslavian origin working for the KGB, the Abomination gained his powers after receiving a dose of gamma radiation similar to that which transformed Bruce Banner into the incredible Hulk."
            tools:visibility="visible"/>

        <TextView
            android:id="@+id/comics_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/comics_title"
            android:textColor="@color/red_tomato"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/comics_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/series_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/series_title"
            android:textColor="@color/red_tomato"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/series_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/events_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/events_title"
            android:textColor="@color/red_tomato"
            android:textSize="15sp"
            android:visibility="gone"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/events_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/marvel_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/marvel_copy_right"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible"/>
</RelativeLayout>